# harnessctl

./: .editorconfig  .gitignore  .lintstagedrc.yml  .prettierignore  .python-version  .web_stash.db  LICENSE  README.md  agents.yaml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.husky/: pre-commit  pre-push
.issues/: 00001-task-implement-systemprofile-probe.md  00002-task-implement-footprint-estimator.md  00003-task-implement-hf-candidate-search-and-ranker.md  00004-task-implement-source-parser-and-downloader.md  00005-task-implement-format-engine-compatibility-matrix.md  00006-task-implement-ollama-modelfile-import.md  00007-task-implement-post-pull-registration-into-models-yaml.md  00008-task-lld-00005-integration-and-testing.md  00009-task-extend-agent-model-and-implement-topology-validation.md  00010-task-implement-agent-prompt-templates-and-escalation-contract.md  00011-task-wire-topology-validation-and-perform-agent-tests.md  00012-epic-implement-unified-model-discovery-and-recommendation-engine.md  00013-task-fix-marketmodel-test-failures-and-code-duplication.md  00014-epic-multi-agent-topology-orchestration.md  00015-task-implement-jsonnet-integration.md  00016-task-implement-template-scanner.md  00017-task-implement-topology-loader-cli.md  00018-epic-implement-harness-taxonomy-registry.md  00019-task-deploy-harness-taxonomy-to-github-releases.md  00020-task-harnessctl-taxonomy-client.md
.specs/: config-sample.jsonnet  config-sample.yml  lld-00001-canonical-spec-and-schema-v1.md  lld-00002-template-compiler-and-harness-emitters-v1.md  lld-00003-mcp-and-model-propagation-v1.md  lld-00007-cli-and-distribution-v1.md  (+13 more)
(+176 files in other folders)
