[project]
name = "harnessctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dragos Cirjan", email = "dragos.cirjan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "huggingface-hub>=1.19.0",
  "jinja2>=3.1.6",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.25.1",
]

[project.scripts]
harnessctl = "harnessctl:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.17"]
