[project]
name = "harnessctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dragos Cirjan", email = "dragos.cirjan@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "huggingface-hub>=1.19.0",
  "jinja2>=3.1.6",
  "json5>=0.14.0",
  "jsonschema>=4.25.1",
  "jsonnet>=0.22.0",
  "msgpack>=1.2.0",
  "nvidia-ml-py>=13.610.43",
  "psutil>=7.2.2",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.25.1",
  "zstandard>=0.25.0",
]

[project.scripts]
harnessctl = "harnessctl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/harnessctl"]

[tool.hatch.build.targets.wheel.shared-data]
"src/harnessctl/spec/defaults/templates" = "harnessctl/spec/defaults/templates"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0", "respx>=0.23.1", "ruff>=0.15.17"]
